--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -7,12 +7,16 @@
 				<input type="checkbox" />
 				Hide Completed Tasks
 			</label>
+
+			{{> loginButtons}}
+
+			{{#if currentUser}}
+				<form class="new-task">
+					<input type="text" name="text" placeholder="Type to add new tasks" />
+				</form>
+			{{/if}}
 		</header>
-
-		<form class="new-task">
-			<input type="text" name="text" placeholder="Type to add new tasks">
- 		</form>
-
+		
 		<ul>
 			{{#each tasks}}
 				{{> task}}
